--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,3 +1,303 @@
+@import url("http://fonts.cdnfonts.com/css/cocogoose-pro");
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css");
+body {
+  margin: 0;
+}
 
+.fa-bars {
+  color: #545454;
+  font-size: 3rem;
+}
+
+.navbar {
+  position: sticky;
+  top: 0px;
+  background-color: #fff;
+  padding: 1rem;
+}
+
+.header {
+  background-image: url(/assets/images/background.jpg);
+  background-size: cover;
+  padding: 2rem 1rem 2rem;
+  font-family: "Lato", sans-serif;
+  min-width: 3rem;
+}
+.header .hello {
+  color: #ec5242;
+  font-size: 2rem;
+  margin-bottom: 0;
+}
+.header h1 {
+  font-weight: 700;
+  font-size: 4rem;
+  background-image: url(/assets/images/textbackground.jpeg);
+  background-size: 150%;
+  color: transparent;
+  background-position: 95%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-font-smoothing: antialiased;
+  margin-top: 0rem;
+  margin-bottom: 0rem;
+}
+.header .abouttext {
+  background-color: #f7f7f7;
+  border: solid 3px #fff;
+  padding: 1rem;
+  color: #5E5E5E;
+}
+.header .date {
+  font-size: 2.5rem;
+  font-weight: 600;
+  color: #5E5E5E;
+  margin-bottom: 0;
+}
+.header .place {
+  color: #5E5E5E;
+  font-size: 1.3rem;
+  margin-top: 0;
+}
+
+.mainprogram {
+  background-color: #343a40;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"), linear-gradient(to right top, #343a40, #2b2c31, #211f22, #151314, #000000);
+  color: #fff;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  vertical-align: middle;
+}
+.mainprogram h2 {
+  text-align: center;
+  font-weight: 400;
+  padding-top: 2rem;
+  margin-top: 0;
+}
+.mainprogram h2:after {
+  content: "";
+  display: block;
+  margin: 0 auto;
+  width: 10%;
+  padding-top: 1rem;
+  border-bottom: 2px solid #ec5242;
+}
+.mainprogram .fa-solid {
+  text-align: center;
+  font-size: 2rem;
+  margin-left: 1rem;
+}
+.mainprogram .info {
+  background-color: rgba(84, 84, 84, 0.5);
+  margin: 1rem 1rem 1rem;
+  min-height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mainprogram .info * {
+  margin-right: 1rem;
+}
+.mainprogram .info .infoheading {
+  font-weight: 600;
+  font-size: 1.3rem;
+  vertical-align: middle;
+  text-align: center;
+  color: #ec5242;
+  max-width: 7rem;
+  text-align: left;
+}
+.mainprogram .info .infotext {
+  text-align: left;
+  font-weight: 400;
+  font-size: 1rem;
+}
+
+.join {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.join button {
+  background-color: #ec5242;
+  border: none;
+  color: #fff;
+  font-weight: 600;
+  font-size: 1.3rem;
+  padding: 2rem;
+  margin: 2rem 0rem 3rem;
+}
+
+.desktopnav {
+  display: flex;
+  justify-content: space-between;
+  padding: 0rem 0rem 0rem;
+}
+.desktopnav .desktoplogo {
+  margin-left: -1.5rem;
+}
+.desktopnav .desktoplogo img {
+  width: 6rem;
+  height: 3rem;
+}
+.desktopnav a {
+  text-decoration: none;
+  color: #272a31;
+  padding-right: 0.5rem;
+  font-family: "Lato", sans-serif;
+}
+.desktopnav ul {
+  display: flex;
+  list-style: none;
+  justify-content: space-between;
+}
+.desktopnav .navlinks {
+  padding-left: 20%;
+  flex-grow: 1;
+}
+.desktopnav .navlinks .about {
+  color: #ec5242;
+}
+.desktopnav .navlinks .cc::after {
+  content: "";
+  display: flex;
+  width: 100%;
+  padding: 1rem 0.3rem;
+  border: 4px solid #ec5242;
+  margin-top: -1.78rem;
+  margin-left: -0.8rem;
+}
+
+.seeprogram {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  font-size: 1.1rem;
+  padding: 2.5rem 0rem 2.5rem;
+  color: #d3d3d3;
+}
+
+.partners {
+  background-color: #272a31;
+  text-align: center;
+  padding: 2rem;
+}
+.partners h2 {
+  color: #8d8d8d;
+  margin: 0;
+  padding-bottom: 2rem;
+}
+.partners h2::after {
+  content: "";
+  display: block;
+  margin: 0 auto;
+  width: 2%;
+  padding-top: 1rem;
+  border-bottom: 1px solid #ec5242;
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 2rem;
+  padding-top: 2rem;
+}
+.footer img {
+  max-width: 15rem;
+  height: 5rem;
+}
+.footer div {
+  display: flex;
+  flex-direction: column;
+  padding-left: 3rem;
+}
+.footer div p {
+  margin: 0;
+  color: #272a31;
+  padding-bottom: 1rem;
+  max-width: 50rem;
+}
+
+@media (max-width: 767px) {
+  .topnavbar {
+    display: none;
+  }
+  .desktopnav {
+    display: none;
+  }
+  .seeprogram {
+    display: none;
+  }
+  .partners {
+    display: none;
+  }
+  .footer {
+    display: none;
+  }
+}
+@media (min-width: 768px) {
+  #menu {
+    display: none;
+  }
+  .topnavbar {
+    display: flex;
+    justify-content: flex-end;
+    background-color: #272a31;
+    padding-right: 10%;
+  }
+  .topnavbar ul {
+    display: flex;
+    list-style: none;
+  }
+  .topnavbar ul a {
+    text-decoration: none;
+    color: #fff;
+    padding-right: 0.5rem;
+    padding-left: 0.5rem;
+    font-family: "Lato", sans-serif;
+  }
+  .navbar {
+    padding: 0.5rem 10% 0.5rem;
+  }
+  .header {
+    padding: 5% 16% 8% 10%;
+  }
+  .header .abouttext {
+    max-width: 33rem;
+  }
+  .mainprogram .infowrapper {
+    display: flex;
+    padding-left: 10%;
+    padding-right: 10%;
+    justify-content: center;
+  }
+  .mainprogram .info {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 0.5rem 1rem;
+    margin: 0.2rem;
+    justify-content: flex-start;
+  }
+  .mainprogram .info .fa-solid {
+    min-height: 1rem;
+  }
+  .mainprogram .info .infoheading {
+    text-align: center;
+    padding: 1rem;
+    margin: 0;
+    min-height: 3rem;
+  }
+  .mainprogram .info .infotext {
+    text-align: center;
+    padding: 0;
+    margin: 0;
+    font-size: 0.85rem;
+  }
+  .join {
+    display: none;
+  }
+}
 
 /*# sourceMappingURL=styles.css.map */
