Add desktop version for home and about pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -299,5 +299,227 @@ body {
     display: none;
   }
 }
+.header-about {
+  background-image: url(/assets/images/background.jpg);
+  background-size: cover;
+  padding: 2rem 1rem 2rem;
+  font-family: "Lato", sans-serif;
+  min-width: 3rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.header-about .hello-about {
+  color: #ec5242;
+  font-size: 1.8rem;
+  margin-bottom: 0;
+}
+.header-about h1 {
+  font-weight: 900;
+  font-size: 3rem;
+  color: #ec5242;
+  margin-top: 0rem;
+  margin-bottom: 1rem;
+  padding-top: 1rem;
+}
+.header-about .abouttext-about {
+  background-color: #fff;
+  border: solid 3px #fff;
+  padding: 1rem;
+  color: #5E5E5E;
+  line-height: 20pt;
+}
+.header-about .contactus {
+  font-size: 0.8rem;
+  font-weight: 600;
+  color: #5E5E5E;
+  margin-bottom: 0;
+  max-width: 20rem;
+  line-height: 20pt;
+}
+.header-about .email {
+  color: #000;
+  font-size: 0.8rem;
+  margin-top: 0;
+  text-decoration: underline;
+}
 
-/*# sourceMappingURL=styles.css.map */
+.partners-about {
+  background-color: #272a31;
+  text-align: center;
+  padding: 2rem;
+}
+.partners-about h2 {
+  color: #8d8d8d;
+  margin: 0;
+  padding-bottom: 2rem;
+}
+.partners-about h2::after {
+  content: "";
+  display: block;
+  margin: 0 auto;
+  width: 10%;
+  padding-top: 1rem;
+  border-bottom: 1px solid #ec5242;
+}
+
+.footer-about {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 2rem;
+  padding-top: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+.footer-about img {
+  max-width: 15rem;
+  height: 5rem;
+}
+.footer-about div {
+  display: flex;
+  flex-direction: column;
+  padding-left: 1rem;
+}
+.footer-about div p {
+  margin: 0;
+  color: #272a31;
+  padding-bottom: 1rem;
+  max-width: 15rem;
+  padding-top: 0.5rem;
+  color: #5e5e5e;
+}
+
+.logo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: "Lato", sans-serif;
+  color: #272a31;
+  text-align: center;
+  padding-bottom: 3rem;
+  border-bottom: 2px solid #f4f4f4;
+  line-height: 20pt;
+}
+.logo h2 {
+  line-height: 25pt;
+}
+.logo p {
+  color: #5e5e5e;
+  max-width: 25rem;
+}
+.logo img {
+  width: 20rem;
+}
+.logo div {
+  border: 2px solid #f4f4f4;
+  padding: 1rem 2rem 1rem;
+  margin-top: 1rem;
+}
+
+.past-summits {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding-top: 1rem;
+}
+.past-summits h2 {
+  font-family: "Lato", sans-serif;
+  color: #272a31;
+}
+.past-summits h2::after {
+  content: "";
+  display: block;
+  margin: 0 auto;
+  width: 6%;
+  padding-top: 1rem;
+  border-bottom: 2px solid #ec5242;
+}
+.past-summits h3 {
+  font-size: 2.5rem;
+  margin-bottom: 0;
+  margin-top: 5rem;
+  font-family: "Lato", sans-serif;
+}
+.past-summits p {
+  color: #5e5e5e;
+  max-width: 25rem;
+  padding-bottom: 1rem;
+  margin-top: 0;
+  line-height: 20pt;
+}
+.past-summits a {
+  color: #fff;
+  text-decoration: none;
+  margin-bottom: 1rem;
+  min-height: 15rem;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.past-summits a p {
+  color: #fff;
+  text-align: center;
+  font-family: "Lato", sans-serif;
+  letter-spacing: 1px;
+}
+.past-summits div {
+  width: 28rem;
+  min-width: 15rem;
+}
+.past-summits .buenos {
+  background-image: url(/assets/images/pastfestivalone.jpg);
+  background-size: cover;
+}
+.past-summits .warsaw {
+  background-image: url(/assets/images/pastfestivaltwo.jpg);
+  background-size: cover;
+}
+
+.partners-about h2 {
+  color: #f7f7f7;
+}
+
+@media (max-width: 767px) {
+  .extralogo {
+    display: none;
+  }
+}
+@media (min-width: 768px) {
+  .hello-about {
+    display: none;
+  }
+  .header-about {
+    padding-top: 3rem;
+  }
+  .header-about h1 {
+    max-width: 35rem;
+  }
+  .abouttext-about {
+    max-width: 45rem;
+  }
+  .extralogo {
+    margin-top: -1rem;
+  }
+  .pastwrapper {
+    display: flex;
+    justify-content: center;
+    width: 100% !important;
+  }
+  .pastwrapper div {
+    width: 25rem !important;
+    padding: 1rem;
+  }
+  .partners-about {
+    display: none;
+  }
+  .footer-about {
+    background-color: #272a31;
+  }
+  .footertitle {
+    color: #f4f4f4 !important;
+  }
+}
+
+/*# sourceMappingURL=main.css.map */
