--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -1,13 +1,12 @@
-@import url('http://fonts.cdnfonts.com/css/cocogoose-pro');
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
-@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css');
+@import url("http://fonts.cdnfonts.com/css/cocogoose-pro");
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css");
 
 $colorone: #272a31;
 $colortwo: #ec5242;
 $colorthree: #d3d3d3;
-$lato: 'Lato', sans-serif;
-$coco: 'Cocogoose Pro', sans-serif;
-                                                
+$lato: "Lato", sans-serif;
+$coco: "Cocogoose Pro", sans-serif;
 
 body {
   margin: 0;
@@ -21,7 +20,7 @@ body {
 .navbar {
   position: sticky;
   top: 0px;
-  background-color: #fff;  
+  background-color: #fff;
   padding: 1rem;
 }
 
@@ -53,29 +52,29 @@ body {
     background-color: #f7f7f7;
     border: solid 3px #fff;
     padding: 1rem;
-    color: #5E5E5E;
+    color: #5e5e5e;
   }
   .date {
     font-size: 2.5rem;
     font-weight: 600;
-    color: #5E5E5E;
+    color: #5e5e5e;
     margin-bottom: 0;
   }
   .place {
-    color: #5E5E5E;
+    color: #5e5e5e;
     font-size: 1.3rem;
     margin-top: 0;
-
   }
 }
 
 .mainprogram {
   background-color: #343a40;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"), linear-gradient(to right top, #343a40, #2b2c31, #211f22, #151314, #000000);
-    color: #fff;
-    font-family: 'Lato', sans-serif;
-    font-weight: 300;
-    vertical-align: middle;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"),
+    linear-gradient(to right top, #343a40, #2b2c31, #211f22, #151314, #000000);
+  color: #fff;
+  font-family: "Lato", sans-serif;
+  font-weight: 300;
+  vertical-align: middle;
   h2 {
     text-align: center;
     font-weight: 400;
@@ -83,11 +82,11 @@ body {
     margin-top: 0;
   }
   h2:after {
-    content: ""; 
+    content: "";
     display: block;
-    margin: 0 auto; 
-    width: 10%; 
-    padding-top: 1rem; 
+    margin: 0 auto;
+    width: 10%;
+    padding-top: 1rem;
     border-bottom: 2px solid $colortwo;
   }
   .fa-solid {
@@ -96,31 +95,31 @@ body {
     margin-left: 1rem;
   }
   .info {
-    background-color: rgba(84, 84, 84, 0.5) ;
+    background-color: rgba(84, 84, 84, 0.5);
     margin: 1rem 1rem 1rem;
     min-height: 5rem;
     display: flex;
     justify-content: center;
     align-items: center;
-      * {
-        margin-right: 1rem;
-      }
-      .infoheading {
-        font-weight: 600;
-        font-size: 1.3rem;
-        vertical-align: middle;
-        text-align: center;
-        color: $colortwo;
-        max-width: 7rem;
-        text-align: left;
-      }
-      .infotext {
-        text-align: left;
-        font-weight: 400;
-        font-size: 1rem;
-      }
+    * {
+      margin-right: 1rem;
+    }
+    .infoheading {
+      font-weight: 600;
+      font-size: 1.3rem;
+      vertical-align: middle;
+      text-align: center;
+      color: $colortwo;
+      max-width: 7rem;
+      min-width: 6rem;
+      text-align: left;
+    }
+    .infotext {
+      text-align: left;
+      font-weight: 400;
+      font-size: 1rem;
+    }
   }
-  
 }
 
 .join {
@@ -142,25 +141,25 @@ body {
   display: flex;
   justify-content: space-between;
   padding: 0rem 0rem 0rem;
-    .desktoplogo {
-      img {
+  .desktoplogo {
+    img {
       width: 6rem;
       height: 3rem;
-      }
+    }
     margin-left: -1.5rem;
-    }
-    a {
-      text-decoration: none;
-      color: $colorone;
-      padding-right: 0.5rem;
-      
-      font-family: $lato;
-    }
-    ul {
-      display: flex;
-      list-style: none;
-      justify-content: space-between;
-    }
+  }
+  a {
+    text-decoration: none;
+    color: $colorone;
+    padding-right: 0.5rem;
+
+    font-family: $lato;
+  }
+  ul {
+    display: flex;
+    list-style: none;
+    justify-content: space-between;
+  }
 }
 
 .seeprogram {
@@ -171,7 +170,7 @@ body {
   font-weight: 400;
   font-size: 1.1rem;
   padding: 2.5rem 0rem 2.5rem;
-  color: $colorthree; 
+  color: $colorthree;
 }
 
 .partners {
@@ -184,11 +183,11 @@ body {
     padding-bottom: 2rem;
   }
   h2::after {
-    content: ""; 
+    content: "";
     display: block;
-    margin: 0 auto; 
-    width: 2%; 
-    padding-top: 1rem; 
+    margin: 0 auto;
+    width: 2%;
+    padding-top: 1rem;
     border-bottom: 1px solid $colortwo;
   }
 }
@@ -223,7 +222,94 @@ body {
   display: none;
 }
 
+.info:hover {
+  border: 1px solid #fff;
+}
 
+.featured-artists {
+  padding-right: 10%;
+  padding-left: 10%;
+  h2 {
+    text-align: center;
+    font-family: $lato;
+    color: $colorone;
+    padding-bottom: 2rem;
+    padding-top: 1rem;
+  }
+  h2::after {
+    content: "";
+    display: block;
+    margin: 0 auto;
+    width: 5%;
+    padding-top: 1rem;
+    border-bottom: 2px solid $colortwo;
+  }
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 2rem;
+  row-gap: 1rem;
+  padding-left: 10%;
+  padding-right: 10%;
+  @media (max-width: 768px) {
+    grid-template-columns: 1fr;
+  }
+  .artist-card {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+    img {
+      height: 10rem;
+      width: 10rem;
+      object-fit: fill;
+    }
+    .artist-img {
+      margin-top: -5rem;
+    }
+    .artist-img::before {
+      content: "";
+      position: relative;
+      display: flex;
+      right: 1.75rem;
+      top: 4.6rem;
+      width: 6rem;
+      height: 6rem;
+      z-index: -1;
+      background: white;
+      background-image: linear-gradient(45deg, #808080 25%, transparent 25%),
+        linear-gradient(-45deg, #808080 25%, transparent 25%),
+        linear-gradient(45deg, transparent 75%, #808080 75%),
+        linear-gradient(-45deg, transparent 75%, #808080 75%);
+      background-size: 20px 20px;
+      background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
+    }
+    .artist-info {
+      flex-direction: column;
+      padding-left: 1rem;
+      h3 {
+        margin: 0;
+        font-family: $lato;
+      }
+      .artist-title {
+        color: $colortwo;
+        font-style: italic;
+        font-size: 1.2rem;
+        margin: 0;
+        margin-top: 0.2rem;
+      }
+      .artist-text {
+        font-family: $lato;
+        font-size: 0.8rem;
+        color: $colorone;
+        margin: 0;
+        margin-top: 1rem;
+      }
+    }
+  }
+}
 
 @media (max-width: 767px) {
   .topnavbar {
@@ -262,10 +348,10 @@ body {
       color: $colortwo;
     }
     .cc::after {
-      content: ""; 
+      content: "";
       display: flex;
-      width: 100%; 
-      padding: 1rem 0.3rem; 
+      width: 100%;
+      padding: 1rem 0.3rem;
       border: 4px solid $colorthree;
       margin-top: -1.78rem;
       margin-left: -0.8rem;
@@ -285,9 +371,14 @@ body {
     margin: 10px 0;
     list-style: none;
   }
+  .artist-info {
+    display: flex;
+    img {
+      height: 5rem;
+      max-width: 5rem;
+    }
+  }
 }
-
-
 
 @media (min-width: 768px) {
   #menu {
@@ -343,8 +434,6 @@ body {
         padding: 1rem;
         margin: 0;
         min-height: 3rem;
-       
-    
       }
       .infotext {
         text-align: center;
@@ -364,10 +453,10 @@ body {
       color: $colortwo;
     }
     .cc::after {
-      content: ""; 
+      content: "";
       display: flex;
-      width: 100%; 
-      padding: 1rem 0.3rem; 
+      width: 100%;
+      padding: 1rem 0.3rem;
       border: 4px solid $colortwo;
       margin-top: -1.78rem;
       margin-left: -0.8rem;
