--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -367,6 +367,10 @@ body {
     height: 5rem;
     max-width: 5rem;
   }
+  .info {
+    display: flex;
+    justify-content: flex-start !important;
+  }
 }
 @media (min-width: 768px) {
   #menu {
@@ -409,6 +413,7 @@ body {
     flex-direction: column;
     padding: 1rem 0.5rem 1rem;
     margin: 0.2rem;
+    max-width: 10rem;
     justify-content: flex-start;
   }
   .mainprogram .info .fa-solid {
