--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -19,7 +19,7 @@ body {
 
 .navbar {
   position: sticky;
-  top: 0px;
+  top: 0;
   background-color: #fff;
   padding: 1rem;
 }
@@ -30,11 +30,13 @@ body {
   padding: 2rem 1rem 2rem;
   font-family: $lato;
   min-width: 3rem;
+
   .hello {
     color: $colortwo;
     font-size: 2rem;
     margin-bottom: 0;
   }
+
   h1 {
     font-weight: 700;
     font-size: 4rem;
@@ -45,21 +47,24 @@ body {
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
     -webkit-font-smoothing: antialiased;
-    margin-top: 0rem;
-    margin-bottom: 0rem;
+    margin-top: 0;
+    margin-bottom: 0;
   }
+
   .abouttext {
     background-color: #f7f7f7;
     border: solid 3px #fff;
     padding: 1rem;
     color: #5e5e5e;
   }
+
   .date {
     font-size: 2.5rem;
     font-weight: 600;
     color: #5e5e5e;
     margin-bottom: 0;
   }
+
   .place {
     color: #5e5e5e;
     font-size: 1.3rem;
@@ -69,19 +74,22 @@ body {
 
 .mainprogram {
   background-color: #343a40;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"),
-    linear-gradient(to right top, #343a40, #2b2c31, #211f22, #151314, #000000);
+  background-image:
+    url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%239C92AC' fill-opacity='0.25' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E"),
+    linear-gradient(to right top, #343a40, #2b2c31, #211f22, #151314, #000);
   color: #fff;
   font-family: "Lato", sans-serif;
   font-weight: 300;
   vertical-align: middle;
+
   h2 {
     text-align: center;
     font-weight: 400;
     padding-top: 2rem;
     margin-top: 0;
   }
-  h2:after {
+
+  h2::after {
     content: "";
     display: block;
     margin: 0 auto;
@@ -89,11 +97,13 @@ body {
     padding-top: 1rem;
     border-bottom: 2px solid $colortwo;
   }
+
   .fa-solid {
     text-align: center;
     font-size: 2rem;
     margin-left: 1rem;
   }
+
   .info {
     background-color: rgba(84, 84, 84, 0.5);
     margin: 1rem 1rem 1rem;
@@ -101,19 +111,21 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+
     * {
       margin-right: 1rem;
     }
+
     .infoheading {
       font-weight: 600;
       font-size: 1.3rem;
       vertical-align: middle;
-      text-align: center;
       color: $colortwo;
       max-width: 7rem;
       min-width: 6rem;
       text-align: left;
     }
+
     .infotext {
       text-align: left;
       font-weight: 400;
@@ -126,6 +138,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+
   button {
     background-color: $colortwo;
     border: none;
@@ -133,28 +146,56 @@ body {
     font-weight: 600;
     font-size: 1.3rem;
     padding: 2rem;
-    margin: 2rem 0rem 3rem;
+    margin: 2rem 0 3rem;
+  }
+}
+
+.footer {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 2rem;
+  padding-top: 2rem;
+
+  img {
+    max-width: 15rem;
+    height: 5rem;
+  }
+
+  div {
+    display: flex;
+    flex-direction: column;
+    padding-left: 3rem;
+
+    p {
+      margin: 0;
+      color: $colorone;
+      padding-bottom: 1rem;
+      max-width: 50rem;
+    }
   }
 }
 
 .desktopnav {
   display: flex;
   justify-content: space-between;
-  padding: 0rem 0rem 0rem;
+  padding: 0 0 0;
+
   .desktoplogo {
     img {
       width: 6rem;
       height: 3rem;
     }
+
     margin-left: -1.5rem;
   }
+
   a {
     text-decoration: none;
     color: $colorone;
     padding-right: 0.5rem;
-
     font-family: $lato;
   }
+
   ul {
     display: flex;
     list-style: none;
@@ -169,7 +210,7 @@ body {
   font-family: $lato;
   font-weight: 400;
   font-size: 1.1rem;
-  padding: 2.5rem 0rem 2.5rem;
+  padding: 2.5rem 0 2.5rem;
   color: $colorthree;
 }
 
@@ -177,11 +218,13 @@ body {
   background-color: $colorone;
   text-align: center;
   padding: 2rem;
+
   h2 {
     color: #8d8d8d;
     margin: 0;
     padding-bottom: 2rem;
   }
+
   h2::after {
     content: "";
     display: block;
@@ -189,28 +232,6 @@ body {
     width: 2%;
     padding-top: 1rem;
     border-bottom: 1px solid $colortwo;
-  }
-}
-
-.footer {
-  display: flex;
-  justify-content: center;
-  padding-bottom: 2rem;
-  padding-top: 2rem;
-  img {
-    max-width: 15rem;
-    height: 5rem;
-  }
-  div {
-    display: flex;
-    flex-direction: column;
-    padding-left: 3rem;
-    p {
-      margin: 0;
-      color: $colorone;
-      padding-bottom: 1rem;
-      max-width: 50rem;
-    }
   }
 }
 
@@ -229,6 +250,7 @@ body {
 .featured-artists {
   padding-right: 10%;
   padding-left: 10%;
+
   h2 {
     text-align: center;
     font-family: $lato;
@@ -236,6 +258,7 @@ body {
     padding-bottom: 2rem;
     padding-top: 1rem;
   }
+
   h2::after {
     content: "";
     display: block;
@@ -253,22 +276,27 @@ body {
   row-gap: 1rem;
   padding-left: 10%;
   padding-right: 10%;
+
   @media (max-width: 768px) {
     grid-template-columns: 1fr;
   }
+
   .artist-card {
     width: 100%;
     display: flex;
     justify-content: center;
     margin-bottom: 50px;
+
     img {
       height: 10rem;
       width: 10rem;
       object-fit: fill;
     }
+
     .artist-img {
       margin-top: -5rem;
     }
+
     .artist-img::before {
       content: "";
       position: relative;
@@ -279,20 +307,25 @@ body {
       height: 6rem;
       z-index: -1;
       background: white;
-      background-image: linear-gradient(45deg, #808080 25%, transparent 25%),
+      background-image:
+
+        linear-gradient(45deg, #808080 25%, transparent 25%),
         linear-gradient(-45deg, #808080 25%, transparent 25%),
         linear-gradient(45deg, transparent 75%, #808080 75%),
         linear-gradient(-45deg, transparent 75%, #808080 75%);
       background-size: 20px 20px;
-      background-position: 0 0, 0 10px, 10px -10px, -10px 0px;
+      background-position: 0 0, 0 10px, 10px -10px, -10px 0;
     }
+
     .artist-info {
       flex-direction: column;
       padding-left: 1rem;
+
       h3 {
         margin: 0;
         font-family: $lato;
       }
+
       .artist-title {
         color: $colortwo;
         font-style: italic;
@@ -300,6 +333,7 @@ body {
         margin: 0;
         margin-top: 0.2rem;
       }
+
       .artist-text {
         font-family: $lato;
         font-size: 0.8rem;
@@ -315,38 +349,41 @@ body {
   .topnavbar {
     display: none;
   }
+
   .desktopnav {
     display: none;
   }
+
   .seeprogram {
     display: none;
   }
+
   .partners {
     display: none;
   }
+
   .footer {
     display: none;
   }
+
   .navlinks {
     position: absolute;
     top: 80%;
     left: 0;
     right: 0;
     width: 100vw;
-    background-color: #3c3a39;
     box-sizing: border-box;
     height: 50rem;
-    padding-right: 10%;
     transition: transform 30s ease-in;
-  }
-  .navlinks {
     padding-left: 20%;
     padding-right: 20%;
     flex-grow: 1;
     background-color: #fff;
+
     .about {
       color: $colortwo;
     }
+
     .cc::after {
       content: "";
       display: flex;
@@ -357,6 +394,7 @@ body {
       margin-left: -0.8rem;
     }
   }
+
   .navlinks a {
     color: $colorone;
     font-size: 32px;
@@ -371,13 +409,16 @@ body {
     margin: 10px 0;
     list-style: none;
   }
+
   .artist-info {
     display: flex;
+
     img {
       height: 5rem;
       max-width: 5rem;
     }
   }
+
   .info {
     display: flex;
     justify-content: flex-start !important;
@@ -388,14 +429,17 @@ body {
   #menu {
     display: none;
   }
+
   .topnavbar {
     display: flex;
     justify-content: flex-end;
     background-color: $colorone;
     padding-right: 10%;
+
     ul {
       display: flex;
       list-style: none;
+
       a {
         text-decoration: none;
         color: #fff;
@@ -412,10 +456,12 @@ body {
 
   .header {
     padding: 5% 16% 8% 10%;
+
     .abouttext {
       max-width: 33rem;
     }
   }
+
   .mainprogram {
     .infowrapper {
       display: flex;
@@ -423,6 +469,7 @@ body {
       padding-right: 10%;
       justify-content: center;
     }
+
     .info {
       display: flex;
       flex-direction: column;
@@ -430,15 +477,18 @@ body {
       margin: 0.2rem;
       max-width: 10rem;
       justify-content: flex-start;
+
       .fa-solid {
         min-height: 1rem;
       }
+
       .infoheading {
         text-align: center;
         padding: 1rem;
         margin: 0;
         min-height: 3rem;
       }
+
       .infotext {
         text-align: center;
         padding: 0;
@@ -447,15 +497,19 @@ body {
       }
     }
   }
+
   .join {
     display: none;
   }
+
   .navlinks {
     padding-left: 20%;
     flex-grow: 1;
+
     .about {
       color: $colortwo;
     }
+
     .cc::after {
       content: "";
       display: flex;
