Add home logo to nav menu

--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -366,6 +366,10 @@ body {
     display: none;
   }
 
+  .desktoplogo {
+    text-align: center;
+  }
+
   .navlinks {
     position: absolute;
     top: 80%;
